<resources>
    <string name="app_name">Medico</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="category">
        <item>Select Category</item>
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>

    <string-array name="lang">
        <item>Select Language</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>

    <string-array name="post_category">
        <item>Select Category</item>
        <item>General Reasoning</item>
        <item>Nutrients</item>
        <item>Healthcare &amp; Cleanliness</item>
        <item>New Facts</item>
    </string-array>

    <string name="post_title">Posts</string>
    <string name="SignUp">SignUP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="register">Register</string>
    <string name="have_an_account">Already have an Account?</string>

    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_btn">Confirm</string>
    <string name="enter_email_address">Enter Email Address</string>

    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="chat">Chat</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="equipments">Equipments</string>
    <string name="preliminaries">Preliminaries</string>
    <string name="awareness_title">Awareness</string>
    <string name="diseases_title">Diseases</string>

    <string name="verify">Verification</string>
    <string name="sendotp">Send OTP</string>
    <string name="confirm">Confirm</string>
    <string name="enter_otp">Enter OTP</string>


    <string name="postTitle">Title....</string>
    <string name="postSubject">Subject....</string>
    <string name="createnewpost">Create New Post</string>

    <string name="degree">Enter Degree</string>
    <string name="Doctor_details">Enter Doctor Details</string>
    <string name="clinicmobileno">Clinic Contact No.</string>
    <string name="upload_docs">Upload Documents</string>


    <string name="type_message">Type a message...</string>

    <string name="search">Search</string>
    <string name="profile">Profile</string>


    //preliminaries
    <string name="preliminaries_heading1">What does prematurity among child means?</string>
    <string name="preliminaries_heading2">Symptoms</string>
    <string name="preliminaries_content1">A premature birth is a birth that takes place more than three weeks before the baby\'s estimated due date. In other words, a premature birth is one that occurs before the start of the 37th week of pregnancy.
Premature babies, especially those born very early, often have complicated medical problems. Typically, complications of prematurity vary. But the earlier your baby is born, the higher the risk of complications.
Depending on how early a baby is born, he or she may be:\n
\u2022	Late preterm, born between 34 and 36 completed weeks of pregnancy\n
•	Moderately preterm, born between 32 and 34 weeks of pregnancy\n
•	Very preterm, born at less than 32 weeks of pregnancy\n
•	Extremely preterm, born at or before 25 weeks of pregnancy\n</string>
    <string name="preliminaries_content2">• Small size, with a disproportionately large head\n
• Sharper looking, less rounded features than a full-term baby\'s features, due to a lack of fat stores\n
• Fine hair (lanugo) covering much of the body\n
• Low body temperature, especially immediately after birth in the delivery room, due to a lack of stored body fat\n
• Labored breathing or respiratory distress\n
• Lack of reflexes for sucking and swallowing, leading to feeding difficulties</string>

    //equipments
    <string name="equipments_heading1">(1)Apena monitor-</string>
    <string name="equipments_heading2">(2)Arterial Line- </string>
    <string name="equipments_heading3">(3)Bililights- </string>
    <string name="equipments_heading4">(4)Continuous Positive Airway Pressure (also called CPAP):- </string>

    <string name="equipments_content1">A machine that detects when your baby stops breathing for a few seconds. An alarm goes off to let NICU staff know your baby has stopped breathing.</string>
    <string name="equipments_content2">A thin tube that goes into your baby\’s artery to check his blood pressure and measure blood gases. An artery is a blood vessel that carries oxygen to all parts of your baby\’s body. Blood pressure is the force of blood that pushes against the walls of the arteries. Blood gases are acid, oxygen and carbon dioxide in your baby\’s blood.</string>
    <string name="equipments_content3">Bright lights over a baby\’s incubator that treat jaundice. An incubator is a clear plastic bed that keeps your baby warm. Jaundice is when a baby\'s eyes and skin look yellow. A baby has jaundice when his liver isn\'t fully developed or isn\'t working. Treatment with bililights is also called phototherapy. Babies can have this treatment for 3 to 7 days.
</string>
    <string name="equipments_content4">A machine that sends air and oxygen to your baby\’s lungs through small tubes in his nose or windpipe (also called trachea).</string>

    //awareness
    <string name="awareness_head">CARING OF PREMATURE BABIES:-</string>
    <string name="awareness_mainpara">\t \t According to the survey of data, it has been concluded that among 100% pregnant women, 70% of them are unaware about premature births and do not take care about their health; resulting into illness in both babies and mothers.
 Following points should be take care while in pregnancy to be aware about premature birth.\n
1)Due to ignorance about pain\n
2)Due to avoiding medicines at proper time\n
3)Due to unhealthy diet\n
4)Due to excessive usage of cosmetics\n</string>
    <string name="awareness_heading1">The correct temperature:-</string>
    <string name="awareness_heading2">Following Regular Time Table:-</string>
    <string name="awareness_heading3">Follow (Frequent) Feeding Cues:-</string>
    <string name="awareness_para1">You need to make sure that you keep your baby at a temperature that is comfortable and safe. The best way to do this is usually with layers - for example, a vest, a sleepsuit and blankets or a zip-up sleeping bag as necessary. You can easily add or remove an item depending on how warm or chilly the surroundings are.</string>
    <string name="awareness_para2">Do check up regularly\n
Concern pediatrician for even small troubles\n
Keep up to date with vaccines\n
Follow directions about feeding\n</string>
    <string name="awareness_para3">In the hospital, premature babies, depending on their level of prematurity, learn to coordinate sucking, swallowing and breathing to eat safely. In those early days, tiny feedings of five milliliters — about the equivalent of a single teaspoon — every three hours around the clock are typical.</string>
    <string name="title_activity_myposts">myposts</string>
</resources>
