<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AwarenessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/MenuStyle">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading1"
        android:text="@string/awareness_title"
        android:textColor="#000"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading1"
        android:textSize="20dp"
        android:id="@+id/text"
        android:text="@string/awareness_mainpara"
        android:textColor="#000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading2"
        android:layout_below="@+id/text"
        android:text="@string/awareness_head"
        android:textColor="#000"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading3"
        android:layout_below="@+id/text"
        android:text="@string/awareness_heading1"
        android:textColor="#000"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading3"
        android:textSize="20dp"
        android:id="@+id/text2"
        android:text="@string/awareness_para1"
        android:textColor="#000"/>


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/heading4"
    android:layout_below="@+id/text2"
    android:text="@string/awareness_heading1"
    android:textColor="#000"
    android:textSize="25dp"
    android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading4"
        android:textSize="20dp"
        android:id="@+id/text3"
        android:text="@string/awareness_para2"
        android:textColor="#000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading5"
        android:layout_below="@+id/text3"
        android:text="@string/awareness_heading1"
        android:textColor="#000"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading5"
        android:textSize="20dp"
        android:id="@+id/text4"
        android:text="@string/awareness_para3"
        android:textColor="#000"/>
    </LinearLayout>
    </ScrollView>

    </LinearLayout>
</RelativeLayout>