<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/heading1"
                    android:text="@string/equipments_heading1"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>

                <ImageView
                    android:layout_width="375dp"
                    android:layout_height="280dp"
                    android:src="@drawable/apena_monitor"
                    android:id="@+id/image_apenamonitor"
                    android:layout_below="@+id/heading1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_apenamonitor"
                    android:textSize="15dp"
                    android:id="@+id/text"
                    android:text="@string/equipments_content1"
                    android:textColor="@color/colorAccent"/>
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/heading2"
                    android:text="@string/equipments_heading2"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>

                <ImageView
                    android:layout_width="375dp"
                    android:layout_height="280dp"
                    android:src="@drawable/arterial_line"
                    android:id="@+id/image_arterial_line"
                    android:layout_below="@+id/heading2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_arterial_line"
                    android:textSize="15dp"
                    android:id="@+id/text2"
                    android:text="@string/equipments_content2"
                    android:textColor="@color/colorAccent"/>
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/heading3"
                    android:text="@string/equipments_heading3"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>

                <ImageView
                    android:layout_width="375dp"
                    android:layout_height="280dp"
                    android:src="@drawable/biliubin"
                    android:id="@+id/image_bililights"
                    android:layout_below="@+id/heading3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_bililights"
                    android:textSize="15dp"
                    android:id="@+id/text3"
                    android:text="@string/equipments_content4"
                    android:textColor="@color/colorAccent"/>
                />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/heading4"
                    android:textColor="@color/colorAccent"
                    android:text="@string/equipments_heading4"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>

                <ImageView
                    android:layout_width="375dp"
                    android:layout_height="280dp"
                    android:src="@drawable/cpap"
                    android:id="@+id/image_cpap"
                    android:layout_below="@+id/heading4"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_bililights"
                    android:textSize="15dp"
                    android:id="@+id/text4"
                    android:text="@string/equipments_content4"
                    android:textColor="@color/colorAccent"/>
                />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>