<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/curvedbgfull"
    android:orientation="vertical"
    android:layout_gravity="center">
    <ImageView
        android:layout_width="235dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/medicologo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Doctor_details"
            android:textColor="#FFFFFF"
            android:textSize="50dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <EditText
                android:id="@+id/Degree"
                android:layout_width="275dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/roundcorner"
                android:hint="@string/degree"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColorHint="#9D90D0"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/ClinicContactNo"
                android:layout_width="275dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/roundcorner"
                android:hint="@string/clinicmobileno"
                android:inputType="numberDecimal|phone"
                android:paddingLeft="20dp"
                android:textColorHint="#9D90D0"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/submit_docs"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="13dp"
                    android:text="@string/upload_docs"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />
                <ImageView
                    android:id="@+id/verify_doc"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/addbutton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
<!--
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="-10dp">

                    <com.spark.submitbutton.SubmitButton
                        android:id="@+id/BtnSuSignIn"
                        android:layout_width="266dp"
                        android:layout_height="150dp"
                        android:orientation="horizontal"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:sub_btn_background="@color/colorPrimaryDark"
                        app:sub_btn_duration="1000"
                        app:sub_btn_line_color="@color/white"
                        app:sub_btn_ripple_color="@color/white"
                        app:sub_btn_tick_color="@color/colorPrimaryDark" />
                </androidx.constraintlayout.widget.ConstraintLayout>-->


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>